--- a/calculator.html
+++ b/calculator.html
@@ -97,74 +97,74 @@
     <div class="card-gallery">
       <div class="card" onclick="flipCard(this)">
         <div class="card-inner">
-          <div class="card-front"><img src="img1/front1.png" alt="front1.png"></div>
-          <div class="card-back"><img src="img1/back1.png" alt="back1.png"></div>
+          <div class="card-front"><img src="img1/front1.jpg" alt="front1.jpg"></div>
+          <div class="card-back"><img src="img1/back1.jpg" alt="back1.jpg"></div>
         </div>
       </div>
       <div class="card" onclick="flipCard(this)">
         <div class="card-inner">
-          <div class="card-front"><img src="img1/front2.png" alt="front2.png"></div>
-          <div class="card-back"><img src="img1/back2.png" alt="back2.png"></div>
+          <div class="card-front"><img src="img1/front2.jpg" alt="front2.jpg"></div>
+          <div class="card-back"><img src="img1/back2.jpg" alt="back2.jpg"></div>
         </div>
       </div>
       <div class="card" onclick="flipCard(this)">
         <div class="card-inner">
-          <div class="card-front"><img src="img1/front3.png" alt="front3.png"></div>
-          <div class="card-back"><img src="img1/back3.png" alt="back3.png"></div>
+          <div class="card-front"><img src="img1/front3.jpg" alt="front3.jpg"></div>
+          <div class="card-back"><img src="img1/back3.jpg" alt="back3.jpg"></div>
         </div>
       </div>
       <div class="card" onclick="flipCard(this)">
         <div class="card-inner">
-          <div class="card-front"><img src="img1/front5.png" alt="front5.pn"></div>
-          <div class="card-back"><img src="img1/back5.png" alt="back5.png"></div>
+          <div class="card-front"><img src="img1/front5.jpg" alt="front5.jpg"></div>
+          <div class="card-back"><img src="img1/back5.jpg" alt="back5.jpg"></div>
         </div>
       </div>
       <div class="card" onclick="flipCard(this)">
         <div class="card-inner">
-          <div class="card-front"><img src="img1/front7.png" alt="front7.png"></div>
-          <div class="card-back"><img src="img1/back7.png" alt="back7.png"></div>
+          <div class="card-front"><img src="img1/front7.jpg" alt="front7.jpg"></div>
+          <div class="card-back"><img src="img1/back7.jpg" alt="back7.jpg"></div>
         </div>
       </div>
       <div class="card" onclick="flipCard(this)">
         <div class="card-inner">
-          <div class="card-front"><img src="img1/front8.png" alt="front8.png"></div>
-          <div class="card-back"><img src="img1/back8.png" alt="back8.png"></div>
+          <div class="card-front"><img src="img1/front8.jpg" alt="front8.jpg"></div>
+          <div class="card-back"><img src="img1/back8.jpg" alt="back8.jpg"></div>
         </div>
       </div>
       <div class="card" onclick="flipCard(this)">
         <div class="card-inner">
-          <div class="card-front"><img src="img1/front9.png" alt="front9.png"></div>
-          <div class="card-back"><img src="img1/back9.png" alt="back9.png"></div>
+          <div class="card-front"><img src="img1/front9.jpg" alt="front9.jpg"></div>
+          <div class="card-back"><img src="img1/back9.jpg" alt="back9.jpg"></div>
         </div>
       </div>
       <div class="card" onclick="flipCard(this)">
         <div class="card-inner">
-          <div class="card-front"><img src="img1/front10.png" alt="front10.png"></div>
-          <div class="card-back"><img src="img1/back10.png" alt="back10.png"></div>
+          <div class="card-front"><img src="img1/front10.jpg" alt="front10.jpg"></div>
+          <div class="card-back"><img src="img1/back10.jpg" alt="back10.jpg"></div>
         </div>
       </div>
       <div class="card" onclick="flipCard(this)">
         <div class="card-inner">
-          <div class="card-front"><img src="img1/front16.png" alt="front16.png"></div>
-          <div class="card-back"><img src="img1/back16.png" alt="back16.png"></div>
+          <div class="card-front"><img src="img1/front16.jpg" alt="front16.jpg"></div>
+          <div class="card-back"><img src="img1/back16.jpg" alt="back16.jpg"></div>
         </div>
       </div>
       <div class="card" onclick="flipCard(this)">
         <div class="card-inner">
-          <div class="card-front"><img src="img1/front17.png" alt="front17.png"></div>
-          <div class="card-back"><img src="img1/back17.png" alt="back17.png"></div>
+          <div class="card-front"><img src="img1/front17.jpg" alt="front17.jpg"></div>
+          <div class="card-back"><img src="img1/back17.jpg" alt="back17.jpg"></div>
         </div>
       </div>
       <div class="card" onclick="flipCard(this)">
         <div class="card-inner">
-          <div class="card-front"><img src="img1/front18.png" alt="front18.png"></div>
-          <div class="card-back"><img src="img1/back18.png" alt="back18.png"></div>
+          <div class="card-front"><img src="img1/front18.jpg" alt="front18.jpg"></div>
+          <div class="card-back"><img src="img1/back18.jpg" alt="back18.jpg"></div>
         </div>
       </div>
       <div class="card" onclick="flipCard(this)">
         <div class="card-inner">
-          <div class="card-front"><img src="img1/front19.png" alt="front19.png"></div>
-          <div class="card-back"><img src="img1/back19.png" alt="back19.png"></div>
+          <div class="card-front"><img src="img1/front19.jpg" alt="front19.jpg"></div>
+          <div class="card-back"><img src="img1/back19.jpg" alt="back19.jpg"></div>
         </div>
       </div>
     </div>
